reviewboard/static/rb/css/pages/reviews.less
/* ... */
/****************************************************************************
 * Code Mirror
 ****************************************************************************/
.CodeMirror {
  border: @textarea-border;
  height: auto;
  margin: @textarea-editor-margin;
  cursor: text;

  .CodeMirror-lines {
    padding: @textarea-editor-padding;
  }

  .CodeMirror-scroll {
    /*
     * Prevent Chrome (and maybe other browsers) from scrolling the page
     * when trying to scroll past the bounds of the text editor.
     */
    overscroll-behavior-y: none;
  }

  pre {
    padding: 0;
  }

  pre.CodeMirror-line,
  pre.CodeMirror-line-like {
    /* Turn off CodeMirror's own padding, since we're setting ours. */
    padding: 0;
  }

  .cm-header {
    color: black;
  }

  /**
   * Highlight Markdown string literals and wrap it in a box.
   *
   * This is a bit complex, due to how CodeMirror represents literals. For
   * a text like::
   *
   *     `literal`
   *
   * The following spans are generated::
   *
   *     <span class="cm-formatting cm-formatting-code cm-rb-markdown-code"/>
   *     <span class="cm-rb-markdown-code"/>
   *     <span class="cm-formatting cm-formatting-code cm-rb-markdown-code"/>
   *
   * (The ``.cm-formatting-code`` spans represent the backticks.)
   *
   * Furthermore, when selected, we may get several of that inner span.
   *
   * The goal is to display a curved rectangle around the whole string of
   * spans, and to do so with the border sitting just outside the content
   * box.
   *
   * To do this, we place the border and offsets in ``:before``. This avoids
   * affecting the bounding box of the line (previous versions of Review Board
   * used negative margins, which had side-effects).
   *
   * We also have to figure out the starting and ending ``.cm-formatting-code``
   * backtick spans in a range, without hitting issues when there are
   * side-by-side literal blocks. To do this, we:
   *
   * 1) Set some defaults (offsets and top/bottom borders) that pertain to
   *    every one of the spans.
   *
   * 2) Set a default border-left on the ``.cm-formatting-code`` spans,
   *    aimed at the first span in a series.
   *
   * 3) Use a more complex ``:not() + ...`` rule to attempt to match the
   *    last ``.cm-formatting-code`` span, where we set a border-right and
   *    unset the border-left.
   *
   *    We use the ``:not()`` in order to skip any text that may have
   *    followed a previous set of spans. Without this, we'd match the
   *    first border and would unset the border-left if it followed another
   *    literal.
   */
  .cm-rb-markdown-code {
    background: var(--ink-p-code-literal-bg);
    color: var(--ink-p-code-literal-fg);
    display: inline-block;
    position: relative;

    &:before {
      content: "";
      border-top: @inline-code-border-size
                  var(--ink-p-code-literal-border-color)
                  solid;
      border-bottom: @inline-code-border-size
                     var(--ink-p-code-literal-border-color)
                     solid;
      position: absolute;
      left: -@inline-code-border-size;
      right: -@inline-code-border-size;
      top: -@inline-code-border-size;
      bottom: -@inline-code-border-size;
    }

    &.cm-formatting-code:before {
      border-left: @inline-code-border-size
                   var(--ink-p-code-literal-border-color)
                   solid;
      border-top-left-radius: @inline-code-border-radius;
      border-bottom-left-radius: @inline-code-border-radius;
    }

    &:not(.cm-formatting-code) + .cm-rb-markdown-code.cm-formatting-code:before {
      border-left: 0;
      border-right: @inline-code-border-size
                    var(--ink-p-code-literal-border-color)
                    solid;
      border-top-left-radius: 0;
      border-top-right-radius: @inline-code-border-radius;
      border-bottom-right-radius: @inline-code-border-radius;
      border-bottom-left-radius: 0;
    }

    &.CodeMirror-selectedtext {
      background: inherit;
    }

    &.cm-formatting-code-block {
      background: none;

      &:before {
        border: 0;
        border-radius: 0;
      }
    }
  }
}

.markdown-info {
  color: var(--ink-p-link-fg);
  font-size: 8pt;
  font-weight: normal;
  float: right;
  line-height: 25px;
  margin-right: 0.5em;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}


/****************************************************************************
 * Review UIs
 ****************************************************************************/
.review-ui-box {
  &.has-review-ui-box-content .review-request-actions-container {
    .actions > li:last-child {
      border-radius: 0 @box-inner-border-radius 0 0;
    }
  }

  &.has-prev-attachment .rb-c-review-request {
    margin-left: @page-container-padding;
  }

  &.has-next-attachment .rb-c-review-request {
    margin-right: @page-container-padding;
  }

  .actions-container {
    .actions > li:last-child {
      border-radius: 0 @box-inner-border-radius @box-inner-border-radius 0;
    }
  }

  .review-ui-box-content {
    border: var(--rb-c-review-request-border);
    border-top: 0;
    clear: both;
    padding: 0;
    min-height: 5em;
  }
}

.review-ui-header {
  border-bottom: var(--rb-c-review-request-border);
  background: var(--rb-c-review-request-bg);
  min-height: 2em;

  h1 {
    margin: 0;
    padding: var(--ink-u-spacing-s);
    font-size: 10pt;

    &.file-attachment-single-revision {
      text-align: center;
    }
  }
}

.dummy-review-ui {
  .review-ui-header table {
    width: 100%;

    .caption {
      text-align: center;
    }
  }

  &-error {
    padding: 2em;
    text-align: center;
  }
}
/* ... */

